--- a/src/Components/Keyboard.module.css
+++ b/src/Components/Keyboard.module.css
@@ -13,7 +13,7 @@
 }
   
   .btn.active {
-    background-color: hsl(200, 100%, 50%);
+    background-color: hsl(200, 7%, 66%,0.2);
     color: white;
   }
   
