--- a/src/Pages/containerman.css
+++ b/src/Pages/containerman.css
@@ -1,4 +1,4 @@
-.todo{
+/* .todo{
    display: flex;
     align-self: flex-start;
     margin-left: 150px;
@@ -12,4 +12,4 @@
 .game{
   
    margin-right: 20px;
-}
+} */
